jss-compiler/tests/semantic_errors/nested_function.jss
function void main() {
    function void nested() {
    }
}
